[package]
name = "tempus_fugit"
version = "0.8.1"
authors = ["Joey Ezechiels <joey.ezechiels@gmail.com>"]
description = "A tiny library to measure the execution time of Rust expressions, with nanosecond precision."
license = "BSD-3-Clause"
edition = "2018"
repository = "http://github.com/jjpe/tempus_fugit"

[dependencies]
chrono = { version = "0.4", features = ["wasmbind"] }
lazy_static = "1.0"
regex = { version = "1.0", optional = true }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
# NOTE: It's only useful to re-enable "chrono/serde" once
#       chrono can de/serialize the `Duration` type.
# enable_serde = ["regex", "serde", "serde_derive", "serde_json", "chrono/serde"]
enable_serde = ["regex", "serde", "serde_derive", "serde_json"]

