[package]
name = "tempus_fugit"
version = "0.9.0"
authors = ["Joey Ezechiels <joey.ezechiels@gmail.com>"]
description = "A tiny library to measure the execution time of Rust expressions, with nanosecond precision."
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "http://github.com/jjpe/tempus_fugit"

[dependencies]
chrono = { version = "0.4", features = ["wasmbind"] }
lazy_static = "1.0"
regex = { version = "1.0", optional = true }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
enable_serde = ["regex", "serde", "serde_derive", "serde_json"]

